# sedgewick

./: .gitignore  build.sh
sedgewick_tasks/: CMakeLists.txt
sedgewick_tasks/src/: mai.cpp
sedgewick_tasks/src/1.3 Union-find algorithms/: union_find.h
